# ner-dspy

./: .env.example  NER_using_DSPy.ipynb  README.md  pyproject.toml
data/: recipe.md
